--- a/Avaliação_Bancos_de_Dados_I_PEDRO_ELIAS_MUNIZ_PERES.ipynb
+++ b/Avaliação_Bancos_de_Dados_I_PEDRO_ELIAS_MUNIZ_PERES.ipynb
@@ -121,7 +121,7 @@
         "\n",
         "1 - O campo multivalorado do telefone passa a ser uma dimensão a parte.\n",
         "\n",
-        "2 - tipo cliente, tipo produto e diretor, não independentes das chaves primárias em cliente e produto, podem passar a ser dimensões a parte também.\n",
+        "2 - tipo cliente, tipo produto e diretor, são independentes das chaves primárias em cliente e produto, podem passar a ser dimensões a parte também.\n",
         "\n",
         "3 - Pedido precisaria ser quebrada em pedido e pedido itens, para evitar que haja repedição dos pedidos quando há mais de 1 item.\n",
         "\n",
